<resources>
    <string name="app_name">Цитаты Волка</string>
    <string name="text_on_start">АУФ.</string>
    <string name="main_button_name">ХОЧУ ЦИТАТУ!</string>
    <string name="downvote_text">чёт не то</string>
    <string name="upvote_text">АУФ</string>
    <string name="sample_text"><![CDATA[<sample text>]]></string>

    <string name="action_settings">Настройки</string>
    <string name="action_favorites">Избранное</string>
    <string name="action_info">Информация</string>
    <string name="points"><![CDATA[<для отладки>]]></string>
    <string name="about_title">О приложении</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="common_header">Общие</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="sound_pref">Звук</string>
    <string name="bg_title">Фон</string>
    <string name="other_header">Другие</string>

</resources>