<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/common_header">

        <SwitchPreferenceCompat
            android:key="isSoundEnabled"
            android:title="@string/sound_pref" />

        <ListPreference
            android:defaultValue="Волк 1"
            android:entries="@array/bg_names"
            android:entryValues="@array/bg_entries"
            android:key="backgroundImage"

            android:summary="Изменить фоновое изображение"
            android:title="@string/bg_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other_header">

        <SwitchPreferenceCompat

            android:key="attachment"
            android:summaryOff="@string/attachment_summary_off"
            android:summaryOn="@string/attachment_summary_on"
            android:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>