<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity"
        android:label="@string/app_name"
        android:id="@+id/main_bg"
        android:orientation="vertical"
        android:background="@drawable/volk0"
        android:padding="16dp">

        <!--<Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />-->

        <TextView
            android:id="@+id/text_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12"
            android:padding="4dp"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corner"

            android:scrollbars="vertical"
            android:ellipsize="end"

            android:text="@string/text_on_start"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"


            android:clickable="true"
            android:focusable="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/goto_history"
                android:layout_width="42dp"
                android:layout_height="41dp"
                android:layout_weight="4"
                android:background="#00FFFFFF"
                android:scaleX="1.4"
                android:scaleY="1.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAuf"
                app:srcCompat="@android:drawable/ic_menu_recent_history" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="16" />

            <ImageButton
                android:id="@+id/goto_favorites"
                android:layout_width="42dp"
                android:layout_height="41dp"
                android:layout_weight="4"
                android:background="#00FFFFFF"
                android:scaleX="1.2"
                android:scaleY="1.2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textAuf"
                app:srcCompat="@android:drawable/btn_star" />

            <Space
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/main_btn_gen"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="10"
                    android:background="@drawable/rounded_corner_btn"
                    android:text="@string/main_button_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="15">

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/downvote_btn"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_corner_btn"
                    android:text="@string/downvote_text" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/upvote_btn"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_corner_btn"
                    android:text="@string/upvote_text" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>